--- a/app/scss/_success.scss
+++ b/app/scss/_success.scss
@@ -20,7 +20,7 @@
   }
 
   &__title {
-    font-size: var(--fs-600);
+    font-size: var(--fs-550);
     font-weight: var(--fw-bold);
     text-transform: uppercase;
   }
